# OOP

./: README.md
Lab1/: L1_Mandru_Catalin_Problem5.cpp
Lab2/: L2_Mandru_Catalin_Problem2_duration.cpp  L2_Mandru_Catalin_Problem2_duration.h  L2_Mandru_Catalin_Problem2_duration_test.cpp
Lab3/: L3_Mandru_Catalin_DSM.cpp  L3_Mandru_Catalin_DSM.h  L3_Mandru_Catalin_DSM_test.cpp  start.bat
Lab4/: CMakeLists.txt  Shop.cpp  shop.bat
Lab4/Controller/: FruitController.cpp  FruitController.h
Lab4/Domain/: Fruit.cpp  Fruit.h
Lab4/Repository/: FruitRepo.cpp  FruitRepo.h
Lab4/Tests/: allTests.cpp
Lab4/UI/: FruitUI.cpp  FruitUI.h
